alignment fixed

--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -1,24 +1,3 @@
-body{
-
-}
-::-webkit-scrollbar {
-  width: 5px;
-}
-::-webkit-scrollbar-track {
-background: #f1f1f1; 
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-background: #d4d4d4; 
-border-radius: 10px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-background: #555; 
-}
-
 
 #webhook{
   background: rgba(255, 255, 255, 0.22);
